<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.salesapp.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo_tf" />

        <TextView
            android:id="@+id/hiAppMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/hi_message"
            android:textColor="@color/font_two"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/welcome_message"
            android:textColor="@color/font_two"
            android:textSize="26sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:textColorHint="@color/font_one"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailET"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:hint="@string/username_or_email"
                android:textColor="@color/font_two"
                android:textSize="16sp"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/font_one"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:textColor="@color/font_two"
                android:maxLines="1"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/putih"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgotText"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/resetPassword"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:text="@string/reset_password"
                android:layout_gravity="end"
                android:textColor="@color/biru"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/appVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/app_version"
        android:textAlignment="center" />
</RelativeLayout>
