<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_create_attendance"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/abu2_muda"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.salesapp.attendance.createattendance.CreateAttendanceActivity"
    tools:showIn="@layout/activity_create_attendance">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/attendanceIconIV"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_attendance_white"/>

            <LinearLayout
                android:layout_toRightOf="@id/attendanceIconIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_create_attendance"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_membuat_absensi_kehadiran"
                    android:textColor="@color/biru"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/btnSubmit"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/submit"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_channel_name"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_nama_toko"
                    android:textColor="@color/biru"
                    android:textSize="12sp"
                    />
            </LinearLayout>


            <RelativeLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white">
                <AutoCompleteTextView
                    android:id="@+id/autocomplete_channel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"/>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_activity"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_aktifitas_kegiatan"
                    android:textColor="@color/biru"
                    android:textSize="12sp"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white">
                <AutoCompleteTextView
                    android:id="@+id/autocomplete_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"/>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_remark"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_keterangan"
                    android:textColor="@color/biru"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/remarkET"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_width="0dp"
                android:minHeight="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:padding="5dp"
                android:textSize="14sp"
                android:background="@android:color/white"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/abu2_agak_tua"/>

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <fragment android:id="@+id/map"
                      android:name="com.google.android.gms.maps.SupportMapFragment"
                      xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:map="http://schemas.android.com/apk/res-auto"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_width="match_parent"
                      android:layout_height="fill_parent"
                      tools:context="com.app.salesapp.attendance.createattendance.CreateAttendanceActivity"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true">

                <ImageView
                    android:id="@+id/imgMyLocation"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/ic_menu_mylocation" />
            </LinearLayout>

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:id="@+id/myLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/biru"
                android:background="@android:drawable/editbox_background"
                android:text="Sedang mencari lokasi anda"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
